--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,18 @@ matplotlib==3.8.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.2
+nvidia-cublas-cu12
+nvidia-cuda-cupti-cu12
+nvidia-cuda-nvrtc-cu12
+nvidia-cuda-runtime-cu12
+nvidia-cudnn-cu12
+nvidia-cufft-cu124
+nvidia-curand-cu12
+nvidia-cusolver-cu12
+nvidia-cusparse-cu12
+nvidia-nccl-cu12
+nvidia-nvjitlink-cu12
+nvidia-nvtx-cu12
 packaging==23.2
 pandas==2.1.3
 Pillow==10.1.0
